# SBC_GUI_Avalonia

./: SBC.sln
SBC/: CInterface.cpp  CInterface.h  CInterface.rgs  CommunicationInterface.cpp  CommunicationInterface.h  Doxyfile  EthernetInterface.cpp  EthernetInterface.h  SBC.APS  SBC.cpp  SBC.def  SBC.idl  SBC.rc  SBC.rgs  SBC.sln  SBC.vcxproj  SBC.vcxproj.filters  SBC_i.c  SBC_i.h  SBC_p.c  UARTInterface.cpp  UARTInterface.h  devdefs.h  devmidl.h  dlldata.c  dllmain.cpp  dllmain.h  resource.h  xdlldata.c
SBC.WPF/: App.axaml  App.axaml.cs  AppSettings.cs  Program.cs  SBC.WPF.csproj  app.manifest
SBC.WPF/Converters/: InverseBooleanConverter.cs
SBC.WPF/Enums/: Group.cs  HWVersion.cs  InterfaceConnection.cs  VersionInfo.cs
SBC.WPF/Interfaces/: CInterface.cs  ICInterface.cs  IExceptionHandlerService.cs  ILoggerService.cs  ISBCInteropService.cs  ISBCLinuxInterface.cs  ITestLoaderService.cs  IWindowTrackerService.cs
SBC.WPF/LinuxInterop/: NativeLinuxSBC.cs  SBCNativeInterface.cs
SBC.WPF/Models/: ExceptionDialogResult.cs  LogLine.cs  TestCase.cs  TestGroup.cs  TestModel.cs  TestRoot.cs
SBC.WPF/Resources/: Converters.axaml  Icons.axaml  LightTheme.axaml  Styles.axaml
SBC.WPF/Services/: Bootstrapper.cs  CInterface.cs  CInterfaceClass.cs  ConfigurationSettingsService.cs  (+7 more)
SBCLinuxAPI/: CMakeLists.txt  COMRuntime.cpp  COMRuntime.h  CommunicationInterface.h  EthernetInterface.cpp  EthernetInterface.h  FactoryRegistry.h  HRESULTCompat.h  InterfaceRegistrar.cpp  SBC.cpp  SimpleRegistry.h  UARTInterface.cpp  UARTInterface.h  devdefs.h  main.cpp  win_com_compat.h
(+32 files in other folders)
